--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/majadito.webp" alt="Majadito" style="width:95%;height:250px;">
+                    <img src="majadito.webp" alt="Majadito" style="width:95%;height:250px;">
                     <h3>¿Te gusta el majadito?</h3>
                 </div>
                 <div class="flip-card-back">
@@ -32,7 +32,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/taquirari.jpg" alt="Taquirari" style="width:95%;height:250px;">
+                    <img src="taquirari.jpg" alt="Taquirari" style="width:95%;height:250px;">
                     <h3>¿Bailas Taquirari?</h3>
                 </div>
                 <div class="flip-card-back">
@@ -47,7 +47,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/sombrero.jpg" alt="Sombrero Camba" style="width:95%;height:250px;">
+                    <img src="sombrero.jpg" alt="Sombrero Camba" style="width:95%;height:250px;">
                     <h3>¿Te gusta usar sombrero camba?</h3>
                 </div>
                 <div class="flip-card-back">
@@ -62,7 +62,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/churrasco.jpg" alt="Churrasco" style="width:95%;height:250px;">
+                    <img src="churrasco.jpg" alt="Churrasco" style="width:95%;height:250px;">
                     <h3>¿Disfrutas un buen churrasco?</h3>
                 </div>
                 <div class="flip-card-back">
@@ -77,7 +77,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/camba.jfif" alt="Camba de Corazón" style="width:95%;height:250px;">
+                    <img src="camba.jfif" alt="Camba de Corazón" style="width:95%;height:250px;">
                     <h3>¿Te sientes camba de corazón?</h3>
                 </div>
                 <div class="flip-card-back">
@@ -92,7 +92,7 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <img src="img/fiesta.jpg" alt="Fiesta Camba" style="width:95%;height:250px;">
+                    <img src="fiesta.jpg" alt="Fiesta Camba" style="width:95%;height:250px;">
                     <h3>¿Te gusta la fiesta camba?</h3>
                 </div>
                 <div class="flip-card-back">
